--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> behat/symfony2-extension ###
+behat.yml
+###< behat/symfony2-extension ###
