base services and data classes

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 ###> behat/symfony2-extension ###
 behat.yml
 ###< behat/symfony2-extension ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
