--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "7.2.*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "fzaninotto/faker": "1.*",
         "sensio/framework-extra-bundle": "5.*",
         "symfony/console": "4.*",
@@ -21,7 +22,8 @@
         "behat/symfony2-extension": "2.*",
         "behatch/contexts": "3.*",
         "phake/phake": "3.*",
-        "phpunit/phpunit": "7.*"
+        "phpunit/phpunit": "7.*",
+        "symfony/expression-language": "4.*"
     },
     "config": {
         "preferred-install": {
