--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -7,6 +7,7 @@ default:
       contexts:
         - App\Tests\Acceptance\Context\FeatureContext:
             kernel: '@kernel'
+            specificationLoader: '@App\OpenAPI\SpecificationLoader'
         - Behat\MinkExtension\Context\MinkContext
         - behatch:context:json
         - behatch:context:rest
