--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,6 +12,10 @@ build:
           - php-scrutinizer-run
           - command: phpcs-run
             use_website_config: true
+          - command: ./vendor/bin/phpunit --coverage-clover clover.xml
+              coverage:
+                file: clover.xml
+                format: php-clover
     tests: true
 filter:
   excluded_paths:
