all basic types and improved parsing

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,13 +5,17 @@ parameters:
   type_parser_map:
     object: 'App\OpenAPI\Parsing\Type\Composite\ObjectTypeParser'
     array: 'App\OpenAPI\Parsing\Type\Composite\ArrayTypeParser'
+    boolean: 'App\OpenAPI\Parsing\Type\Primitive\BooleanTypeParser'
     integer: 'App\OpenAPI\Parsing\Type\Primitive\IntegerTypeParser'
+    number: 'App\OpenAPI\Parsing\Type\Primitive\NumberTypeParser'
     string: 'App\OpenAPI\Parsing\Type\Primitive\StringTypeParser'
 
   value_generator_map:
     App\Mock\Parameters\Schema\Type\Composite\ObjectType: 'App\Mock\Generation\Value\Composite\ObjectValueGenerator'
     App\Mock\Parameters\Schema\Type\Composite\ArrayType: 'App\Mock\Generation\Value\Composite\ArrayValueGenerator'
+    App\Mock\Parameters\Schema\Type\Primitive\BooleanType: 'App\Mock\Generation\Value\Primitive\RandomBooleanGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\IntegerType: 'App\Mock\Generation\Value\Primitive\FakerIntegerGenerator'
+    App\Mock\Parameters\Schema\Type\Primitive\NumberType: 'App\Mock\Generation\Value\Primitive\FakerNumberGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\StringType: 'App\Mock\Generation\Value\Primitive\FakerStringGenerator'
 
 
@@ -20,6 +24,10 @@ services:
     autowire: true
     autoconfigure: true
     public: false
+    bind:
+      $endpointParser: '@App\OpenAPI\Parsing\EndpointParser'
+      $responseParser: '@App\OpenAPI\Parsing\ResponseParser'
+      $schemaParser: '@App\OpenAPI\Parsing\SchemaParser'
 
   App\:
     resource: '../src/*'
