--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -6,10 +6,11 @@ default:
         bootstrap: 'tests/Acceptance/bootstrap'
       contexts:
         - App\Tests\Acceptance\Context\FeatureContext:
-            kernel: '@kernel'
-            specificationLoader: '@App\OpenAPI\SpecificationLoader'
+            specificationLoader: '@specification_loader'
+            swaggerFilesDirectory: 'tests/Resources/swagger-files/'
         - Behat\MinkExtension\Context\MinkContext
         - behatch:context:json
+        - behatch:context:xml
         - behatch:context:rest
 
   extensions:
