--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,8 +15,8 @@ parameters:
     App\Mock\Parameters\Schema\Type\Composite\ObjectType: 'App\Mock\Generation\Value\Composite\ObjectValueGenerator'
     App\Mock\Parameters\Schema\Type\Composite\ArrayType: 'App\Mock\Generation\Value\Composite\ArrayValueGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\BooleanType: 'App\Mock\Generation\Value\Primitive\RandomBooleanGenerator'
-    App\Mock\Parameters\Schema\Type\Primitive\IntegerType: 'App\Mock\Generation\Value\Primitive\FakerIntegerGenerator'
-    App\Mock\Parameters\Schema\Type\Primitive\NumberType: 'App\Mock\Generation\Value\Primitive\FakerNumberGenerator'
+    App\Mock\Parameters\Schema\Type\Primitive\IntegerType: 'App\Mock\Generation\Value\Primitive\RandomIntegerGenerator'
+    App\Mock\Parameters\Schema\Type\Primitive\NumberType: 'App\Mock\Generation\Value\Primitive\RandomNumberGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\StringType: 'App\Mock\Generation\Value\Primitive\FakerStringGenerator'
 
 
