array parameters for generation

--- a/tests/Resources/swagger-files/value-generation.yaml
+++ b/tests/Resources/swagger-files/value-generation.yaml
@@ -23,6 +23,7 @@ paths:
                   - byte
                   - shortString
                   - longString
+                  - array
                 properties:
                   rangedInteger:
                     type: integer
@@ -74,4 +75,9 @@ paths:
                     type: string
                     minLength: 100
                     maxLength: 105
-
+                  array:
+                    type: array
+                    minItems: 5
+                    maxItems: 5
+                    items:
+                      type: integer
