--- a/tests/Resources/swagger-files/value-generation.yaml
+++ b/tests/Resources/swagger-files/value-generation.yaml
@@ -85,3 +85,7 @@ paths:
                   freeForm:
                     type: object
                     additionalProperties: {}
+                  hashMap:
+                    type: object
+                    additionalProperties:
+                      type: string
