--- a/tests/Resources/swagger-files/value-generation.yaml
+++ b/tests/Resources/swagger-files/value-generation.yaml
@@ -89,3 +89,18 @@ paths:
                     type: object
                     additionalProperties:
                       type: string
+                  fixedHashMap:
+                    type: object
+                    properties:
+                      default:
+                        type: string
+                        enum:
+                          - value
+                    required:
+                      - default
+                    minProperties: 1
+                    maxProperties: 1
+                    additionalProperties:
+                      type: string
+                      enum:
+                        - value
