parsing services migrated to specification accessor

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,7 @@ services:
       $endpointParser: '@App\OpenAPI\Parsing\EndpointParser'
       $responseParser: '@App\OpenAPI\Parsing\ResponseParser'
       $schemaParser: '@App\OpenAPI\Parsing\SchemaParser'
+      $delegatingSchemaParser: '@App\OpenAPI\Parsing\Type\DelegatingSchemaParser'
 
   App\:
     resource: '../src/*'
