local reference resolving for responses and schemas

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,6 +32,7 @@ services:
       $responseParser: '@App\OpenAPI\Parsing\ResponseParser'
       $schemaParser: '@App\OpenAPI\Parsing\SchemaParser'
       $delegatingSchemaParser: '@App\OpenAPI\Parsing\Type\DelegatingSchemaParser'
+      $resolvingSchemaParser: '@App\OpenAPI\Parsing\Type\ReferenceResolvingSchemaParser'
 
   App\:
     resource: '../src/*'
