--- a/tests/Resources/swagger-files/single-entity.yaml
+++ b/tests/Resources/swagger-files/single-entity.yaml
@@ -17,7 +17,7 @@ paths:
                 properties:
                   id:
                     type: integer
-                    minumum: 0
+                    minimum: 0
                     maximum: 65535
                   name:
                     type: string
