--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,7 @@
 parameters:
   locale: 'en'
 #  specification_url: '%env(SPECIFICATION_URL)%'
-  specification_url: '%kernel.project_dir%/tests/Resources/swagger-files/value-generation.yaml'
+  specification_url: '%kernel.project_dir%/tests/Resources/swagger-files/combined-types.yaml'
 
   type_parser_map:
     object: 'App\OpenAPI\Parsing\Type\Composite\ObjectTypeParser'
@@ -10,16 +10,20 @@ parameters:
     integer: 'App\OpenAPI\Parsing\Type\Primitive\IntegerTypeParser'
     number: 'App\OpenAPI\Parsing\Type\Primitive\NumberTypeParser'
     string: 'App\OpenAPI\Parsing\Type\Primitive\StringTypeParser'
+    oneOf: 'App\OpenAPI\Parsing\Type\Combined\CombinedTypeParser'
+    allOf: 'App\OpenAPI\Parsing\Type\Combined\CombinedTypeParser'
+    anyOf: 'App\OpenAPI\Parsing\Type\Combined\CombinedTypeParser'
 
   value_generator_map:
-    App\Mock\Parameters\Schema\Type\Composite\ObjectType: 'App\Mock\Generation\Value\Composite\ObjectValueGenerator'
-    App\Mock\Parameters\Schema\Type\Composite\FreeFormObjectType: 'App\Mock\Generation\Value\Composite\FreeFormObjectValueGenerator'
-    App\Mock\Parameters\Schema\Type\Composite\HashMapType: 'App\Mock\Generation\Value\Composite\HashMapValueGenerator'
-    App\Mock\Parameters\Schema\Type\Composite\ArrayType: 'App\Mock\Generation\Value\Composite\ArrayValueGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\BooleanType: 'App\Mock\Generation\Value\Primitive\RandomBooleanGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\IntegerType: 'App\Mock\Generation\Value\Primitive\RandomIntegerGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\NumberType: 'App\Mock\Generation\Value\Primitive\RandomNumberGenerator'
     App\Mock\Parameters\Schema\Type\Primitive\StringType: 'App\Mock\Generation\Value\Primitive\FakerStringGenerator'
+    App\Mock\Parameters\Schema\Type\Composite\ObjectType: 'App\Mock\Generation\Value\Composite\ObjectValueGenerator'
+    App\Mock\Parameters\Schema\Type\Composite\FreeFormObjectType: 'App\Mock\Generation\Value\Composite\FreeFormObjectValueGenerator'
+    App\Mock\Parameters\Schema\Type\Composite\HashMapType: 'App\Mock\Generation\Value\Composite\HashMapValueGenerator'
+    App\Mock\Parameters\Schema\Type\Composite\ArrayType: 'App\Mock\Generation\Value\Composite\ArrayValueGenerator'
+    App\Mock\Parameters\Schema\Type\Combined\OneOfType: 'App\Mock\Generation\Value\Combined\OneOfValueGenerator'
 
 
 services:
