--- a/tests/Resources/swagger-files/combined-types.yaml
+++ b/tests/Resources/swagger-files/combined-types.yaml
@@ -10,9 +10,30 @@ paths:
                 type: object
                 required:
                   - oneOfProperty
+                  - allOfProperty
                 properties:
                   oneOfProperty:
                     oneOf:
+                      - type: object
+                        required:
+                          - id
+                          - name
+                        properties:
+                          id:
+                            type: integer
+                          name:
+                            type: string
+                      - type: object
+                        required:
+                          - id
+                          - title
+                        properties:
+                          id:
+                            type: integer
+                          title:
+                            type: string
+                  allOfProperty:
+                    allOf:
                       - type: object
                         required:
                           - id
