--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       APP_ENV: prod
       SWAGGER_MOCK_SPECIFICATION_URL: 'https://raw.githubusercontent.com/OAI/OpenAPI-Specification/master/examples/v3.0/petstore.yaml'
-      SWAGGER_MOCK_CACHE_STRATEGY: 'MD5'
+      SWAGGER_MOCK_CACHE_STRATEGY: 'md5'
       SWAGGER_MOCK_LOG_LEVEL: 'debug'
     volumes:
       - .:/app
