--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 /.dev
+/build
 /docs
 /examples
 /tests
@@ -7,7 +8,6 @@
 
 .scrutinizer.yml
 behat.yml.dist
-build.sh
 docker-compose.yml
 Dockerfile
 easy-coding-standard.yml
