docker image build in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
 
 deploy:
   provider: script
-  script: bash deploy.sh
+  script: bash ./build/deploy.sh
   on:
     branch:
       - master
