--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 
 script:
   - ./vendor/bin/phpunit
+  - ./vendor/bin/behat
   - docker build --pull --tag "swaggermock/swagger-mock" .
   - docker images
 
