--- a/tests/Resources/swagger-files/routing.yaml
+++ b/tests/Resources/swagger-files/routing.yaml
@@ -14,11 +14,11 @@ paths:
                   key:
                     type: string
                     enum:
-                      - value
-  /resources/{resourceId}:
+                      - resourceCollection
+  /resources/{stringId}:
     get:
       parameters:
-        - name: resourceId
+        - name: stringId
           in: path
           required: true
           schema:
@@ -35,4 +35,67 @@ paths:
                   key:
                     type: string
                     enum:
-                      - value
+                      - resourceItem
+  /resources/{stringId}/subresources:
+    get:
+      parameters:
+        - name: stringId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - key
+                properties:
+                  key:
+                    type: string
+                    enum:
+                      - subresourceCollection
+  /resources/{stringId}/subresources/{stringId}:
+    get:
+      parameters:
+        - name: stringId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - key
+                properties:
+                  key:
+                    type: string
+                    enum:
+                      - subresourceItem
+  /integer-route/{integerId}:
+    get:
+      parameters:
+        - name: integerId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - key
+                properties:
+                  key:
+                    type: string
+                    enum:
+                      - integerRouteItem
