--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,10 @@ volumes:
 services:
   swagger_mock:
     container_name: swagger_mock
-    build:
-      context: ./.dev
+    build: .
     environment:
-      APP_ENV: dev
+      APP_ENV: prod
       SWAGGER_MOCK_SPECIFICATION_URL: 'https://raw.githubusercontent.com/OAI/OpenAPI-Specification/master/examples/v3.0/petstore.yaml'
       SWAGGER_MOCK_CACHE_STRATEGY: 'md5'
-      SWAGGER_MOCK_LOG_LEVEL: 'debug'
-    volumes:
-      - .:/app
-      - composer_data:/var/run/composer
     ports:
       - "8080:8080"
-      - "9001:9000"
